<resources>
    <string name="app_name">Beautify</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="register_prompt">Don\'t have an account? Register.</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="wrong_creds_error">Wrong credentials, please try again</string>
    <string name="registration_title">Registration</string>
    <string name="username_occupied">This username is occupied</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="name_hint">First name</string>
    <string name="surname_hint">Second name</string>
    <string name="city_hint">City</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="action_register">Register</string>
    <string name="empty_field_message">This field should not be empty</string>
    <string name="occupied_login_message">This login is already occupied</string>
    <string name="password_short_message">Password should contain at least 8 digits including uppercase, lowercase, numbers and special characters</string>
    <string name="passwords_different_message">This password differs from original</string>
    <string name="i_am_a_master_text">I am a master</string>
    <string name="progress_message">Loading</string>
    <string name="time_content_description">Time</string>
    <string name="appointment_date_time_format">%1$s : %2$s - %3$s</string>
    <string name="name_surname_format">%1$s %2$s</string>

    <string name="avatar_content_description">User avatar</string>
    <string name="orders_label">orders</string>
    <string name="using_app_label">using app</string>
    <string name="ratings_laber">ratings</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="price_hint">Price</string>
    <string name="date_hint">Date</string>
    <string name="time_from_hint">Time from</string>
    <string name="time_to_hint">Time to</string>
    <string name="master_field">Master: </string>
    <string name="client_field">Client: </string>
    <string name="change">Change</string>
    <string name="make_appointment">Make an appointment</string>
    <string name="delete_appointment">Delete appointment</string>
    <string name="edit_appointment">Edit appointment</string>
    <string name="complete_appointment">Complete appointment</string>
    <string name="appointment_completed">Appointment completed</string>
    <string name="rate_appointment">Rate appointment</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="error_title">Error!</string>
    <string name="cancel">Cancel</string>
    <string name="delete_appointment_confirmation">Are you sure you want to delete appointment?</string>
    <string name="complete_appointment_confirmation">Are you sure you want to complete appointment?</string>
</resources>