<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="My custom title" />

    <ImageView
        android:id="@+id/timeIcon"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginTop="8sp"
        android:contentDescription="@string/time_content_description"
        android:src="@drawable/outline_access_time_24"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/timeIcon"
        app:layout_constraintStart_toEndOf="@+id/timeIcon"
        app:layout_constraintTop_toTopOf="@+id/timeIcon"
        tools:text="23.09.2023 -- 15:00-16:00" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginTop="8sp"
        android:contentDescription="@string/time_content_description"
        android:src="@drawable/outline_account_circle_24"
        app:layout_constraintStart_toStartOf="@+id/timeIcon"
        app:layout_constraintTop_toBottomOf="@+id/timeIcon" />

    <TextView
        android:id="@+id/userTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/userIcon"
        app:layout_constraintStart_toEndOf="@+id/userIcon"
        app:layout_constraintTop_toTopOf="@+id/userIcon"
        tools:text="Ludmila Ulianova" />

    <ImageView
        android:id="@+id/descriptionIcon"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginTop="8sp"
        android:contentDescription="@string/time_content_description"
        android:src="@drawable/outline_description_24"
        app:layout_constraintStart_toStartOf="@+id/userIcon"
        app:layout_constraintTop_toBottomOf="@+id/userIcon" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/descriptionIcon"
        app:layout_constraintTop_toTopOf="@+id/descriptionIcon"
        tools:text="List of work:\n-nail polish\n-make a design with strawberries from the chat" />


    <Button
        android:id="@+id/completeAppointmentButton"
        style="@style/Wide"
        android:layout_margin="12dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/positive_green"
        android:text="@string/complete_appointment"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/editAppointmentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editAppointmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/edit_appointment"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteAppointmentButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/appointmentCompletedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/appointment_completed"
        android:textColor="@color/positive_green"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/editAppointmentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/deleteAppointmentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/negative_red"
        android:text="@string/delete_appointment"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editAppointmentButton"
        tools:visibility="visible" />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/rate_appointment"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>